# landing_page

./: .gitignore  .lycheeignore  ARTICLE_CHECLLIST.md  README.md  branch_aware_verifier.py  changes.md  install-and-build.sh  landing_page.sln  lychee.toml  main_page_content.md  multi-representation-search-task.md  netlify.toml  package-lock.json  package.json  run.sh  test  update-config.sh
.claude/skills/andrey-review/: SKILL.md
.claude/skills/qdrant-content/: SKILL.md
.claude/skills/trim/: SKILL.md
.github/: dependabot.yml
.github/workflows/: check-dead-links.yml  generate-llms-txt.yml  generate-preview-images.yml  internal-dead-links.yml  main.yml  snippets.yml  update-github-stars.yml  update-stats.yml
article-research/: DEEP_REVIEW_PROMPT.md  REVIEW_CONTEXT.md  headline_final_v25.json  self-correcting-retrieval-loops.ipynb  targeted_stop_v25.json
automation/: describe-snippets.py  doc-sync.bash  doc-sync.sh  extract-snippets.py  gen-all-blogs-previews.sh  generate-all-docs-preview.sh  generate-doc-preview.sh  generate-llms-txt.py  generate_lychee_toml.sh  process-article-img.sh  process-blog-img.sh  process-img.sh  update-github-stars.sh  update-stats.sh
automation/snippets/: .gitignore  README.md  check.py  docker.sh  generate-md.py  migrate-snippet.py  pyproject.toml  shell.nix  snippets  sync-clients.py
automation/snippets/docker/: Dockerfile
automation/snippets/lib/: __init__.py
automation/snippets/templates/python/: main.py  pyproject.toml
automation/snippets/templates/rust/: Cargo.toml
automation/snippets/templates/rust/qdrant-edge/: Cargo.toml
automation/snippets/templates/rust/qdrant-edge/src/: lib.rs
automation/snippets/templates/rust/src/: main.rs
automation/template/: apply-template.sh  imagick_type_gen
automation/template/fonts/: type.xml
entropy-doc/: index.html
entropy-doc/css/: style.css
entropy-placeholder/: about.html  blog-detail.html  blog-leftsidebar.html  blog-rightsidebar.html  blog.html  comming-soon.html  contact.html  documentation.html  error.html  index-2.html  index-3.html  index-4.html  index.html  login.html  price.html  privacy.html  register.html  sendemail.php  services.html  team.html
entropy-placeholder/css/: custom-animate.css  flaticon.css  jquery.bxslider.min.css  main.css  responsive.css
entropy-placeholder/fonts/: flaticon.eot
entropy-placeholder/js/: script.js
netlify/edge-functions/: content-negotiation.js
netlify/functions/: certificate.js  package.json
qdrant-landing/: .gitignore  .vale.ini  GrammarLinter.md  README.md  build_and_sync.sh  config-theme.toml  config.toml  documentation.html  index.html  netlify.toml  package-lock.json  package.hugo.json  package.json  solutions.html  webpack.config.js
qdrant-landing/.github/workflows/: check-dead-links.yml  internal-dead-links.yml  main.yml
qdrant-landing/archetypes/: agenda.md  blog-post.md  delimiter.md  external-link.md
qdrant-landing/assets/: jsconfig.json
qdrant-landing/assets/schema/: article-schema.json  event-schema.json  hybrid-cloud.json  organization-schema.json  product-schema.json  schema-organization.json
qdrant-landing/content/: qdrant_and_jina_integration.md
qdrant-landing/content/about-us/: _index.md  about-us-get-started.md  (+8 more)
qdrant-landing/css/: custom-animate.css
qdrant-landing/js/: script.js
qdrant-landing/lib/: qdrant-analytics-events-1.0.10.tgz  qdrant-analytics-events-1.0.14.pre-release.tgz  qdrant-analytics-events-dev.2.tgz  qdrant-analytics-events-dev.tgz
qdrant-landing/qdrant_storage/: raft_state.json
qdrant-landing/static/: _redirects  cosign.pub  llms-full.txt  llms.txt  robots.txt  site.webmanifest  web-ui-banner.json  web-ui-info.json
qdrant-landing/styles/: Spelling.yml
qdrant_storage/: raft_state.json
(+6227 files in other folders)
