[package]
name = "snippets-amalgamation"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
qdrant-edge = { path = "qdrant-edge" }
fs-err = "3"
ordered-float = "5"
qdrant-client = { git = "https://github.com/qdrant/rust-client", branch = "dev" }
serde_json = "1.0.145"
tempfile = "3"
tokio = { version = "1.48.0", features = ["rt-multi-thread", "macros"] }
ureq = { version = "3", features = ["json"] }
uuid = { version = "1.18.1", features = ["v4"] }

[patch.crates-io]
tonic = { git = "https://github.com/qdrant/tonic", branch = "v0.11.0-qdrant" }
hyper = { git = "https://github.com/qdrant/hyper", branch = "v0.14.26-qdrant" }
